--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -38,7 +38,7 @@
     <div class="ctn-row ctn-content-top">
       <div process-diagram="processInstance.semantic" process-definition="processInstance.processDefinition"
             annotations="processInstance.activityInstanceStatistics" incidents="processInstance.incidentsOnActivityArray"
-            selection="selection" clickable-elements="processInstance.clickableElements" style="width: 100%">
+            selection="selection" clickable-elements="processInstance.clickableElements">
       </div>
     </div>
 
