feat(call): Show called process def./inst.
- in the process definition view the called process definitions are shown
  in a new tab.
- in the process instance view are also shown the called process instances
- it is possible to filter after process instance, if you select a bpmn
  element in the process diagram
- add businessKey to process instance query

related to CAM-783, CAM-910

--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -38,7 +38,7 @@
     <div class="ctn-row ctn-content-top">
       <div process-diagram="processInstance.semantic" process-definition="processInstance.processDefinition"
             annotations="processInstance.activityInstanceStatistics" incidents="processInstance.incidentsOnActivityArray"
-            selection="selection" clickable-elements="processInstance.clickableElements" style="width: 100%">
+            selection="selection" clickable-elements="processInstance.clickableElements">
       </div>
     </div>
 
