--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -49,10 +49,11 @@
 
     <!-- content top pane -->
     <div class="ctn-row ctn-content-top">
-      <div process-diagram="semantic" process-definition="processDefinition" annotations="activityStatistics" incidents="incidents" on-scroll-and-zoom></div>
+      <div process-diagram="semantic" process-definition="processDefinition" annotations="activityStatistics" incidents="incidents"
+           selection="selection" clickable-elements="clickableElements"></div>
     </div>
 
-    <!-- content bottom pane -->
+    <!-- content bottom pane
     <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
       <ul class="nav nav-tabs">
         <li class="active">
@@ -61,7 +62,22 @@
       </ul>
 
       <div view provider="processInstanceTable" vars="processDefinitionLatestVersionCount" class="ctn-tabbed-content"></div>
-    </div>
+    </div> -->
+
+    <!-- content bottom pane -->
+    <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
+      <div ng-show="processDefinitionViews.length">
+        <ul class="nav nav-tabs">
+          <li ng-class="{ active: selectedView == viewProvider }" ng-repeat="viewProvider in processDefinitionViews">
+            <a href ng-click="selectView(viewProvider)">{{ viewProvider.label }}</a>
+          </li>
+        </ul>
+  
+        <div class="ctn-tabbed-content">
+          <view provider="selectedView" vars="processDefinitionVars" />
+        </div>
+      </div>
+    </div>    
 
     <a class="show-collapsable"></a>
   </div>
