feat(webapp): manage authorizations
- add support for managing authorizations in Admin
- expose Permissions as Strings in REST API

related to #CAM-1041

--- a/client/pages/groupEdit.html
+++ b/client/pages/groupEdit.html
@@ -9,9 +9,9 @@
       <div class="span3">
         <div class="well sidebar-nav">
           <ul class="nav nav-list">
-            <li ng-class="activeClass('group')">
+            <li ng-class="activeClass('tab=group')">
               <a href="#/groups/{{group.id}}?tab=group">Group</a>
-            </li>                     
+            </li>                 
           </ul>          
         </div>
       </div>
@@ -63,8 +63,7 @@
             </form>  
           </div>
         </div>
-
-      
+     
       </div>
     </div>
   </section>
