chore(link): Change deeplink to process instance
- change deeplink for a process instance from
  '#/process-definition/:anId/process-instance/:aProcessInstance" to
  '#/process-instance/:aProcessInstance"

related to CAM-1051

--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -100,7 +100,7 @@
             <tbody>
               <tr ng-repeat="subProcessInstance in subProcessInstances">
                 <td>
-                  <a target="__blank" ng-href="#/process-definition/{{ subProcessInstance.definitionId }}/process-instance/{{ subProcessInstance.id }}">
+                  <a target="__blank" ng-href="#/process-instance/{{ subProcessInstance.id }}">
                     {{ subProcessInstance.id | shorten:8 }}
                   </a>
                 </td>
