fix(cockpit/processvars): remove spaces from variable expressions
- variables NAME OP VALUE will now be parsed without a mandatory space
in
  between the parts. Only difference: the like operator still needs to
be
  surrounded by spaces so that it can be distinguished from parts of a
variable

- variables are deserialized to the non-space form, too

Closes CAM-1126

--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -93,7 +93,7 @@
                      ng-change="filterChanged()" />
             </div>
 
-            <div class="note note-small" ng-if="filterForm.businessKey.$invalid">
+            <div class="note note-error note-small" ng-if="filterForm.businessKey.$invalid">
               Field is required
             </div>
           </li>
@@ -118,7 +118,7 @@
                      ng-change="filterChanged()" 
                      process-variable />
 
-              <div class="note note-small" ng-show="filterForm['variableFilter' + $index].$invalid">
+              <div class="note note-error note-small" ng-show="filterForm['variableFilter' + $index].$invalid">
                 <div ng-show="filterForm['variableFilter' + $index].$error.required">
                   Field is required.
                 </div>
@@ -143,7 +143,10 @@
                 <code>variableName OPERATOR value</code> where <code>OPERATOR</code> may be any of 
                 <span ng-repeat="op in operators"><span ng-show="$index > 0">, </span><code>{{ op }}</code></span>.
                 All variable filters are applied using the logical <code>AND</code>.
-                Strings must be properly enclosed in <code>"</code>.
+                Strings must be properly enclosed in <code>""</code>.
+                <br/>
+                <br/>
+                Samples: <code>customerId = 1212</code>, <code>name like "%Walter"</code>, <code>checked = true</code>
               </div>
             </div>
           </li>
