--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -30,8 +30,10 @@
 
     <div class="page-header">
       <small>Process Instance</small>
-      <h1 ng-show="!!processInstance.processDefinition.name">{{ processInstance.processDefinition.name }} <span title="{{ processInstance.id }}">{{ processInstance.id | shorten:8 }}</span></h1>
-      <h1 ng-show="!processInstance.processDefinition.name">{{ processInstance.processDefinition.key }} <span title="{{ processInstance.id }}">{{ processInstance.id | shorten:8 }}</span></h1>
+      <h1>{{ processDefinition.name || processDefinition.key }}</h1>
+      <p>
+        <strong>{{ processInstance.id }}</strong>
+      </p>
     </div>
 
     <div activity-instance-tree="activityInstanceTree" on-element-click="handleActivityInstanceSelection(id, activityId, $event)" selection="filter"></div>
