--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -257,7 +257,7 @@
     <div class="modal-body">
       <div notifications-panel></div>
 
-      <form class="form-horizontal" name="addVariableForm" novalidate ng-submit="save()" ng-hide="status === 'SUCCESS' || status === 'FAIL'">
+      <form class="form-horizontal" name="addVariableForm" novalidate ng-submit="save()" ng-hide="status === 'SUCCESS' || status === 'FAIL'" request-aware>
         <fieldset>
 
           <div class="control-group">
@@ -280,10 +280,10 @@
             <div class="controls">
               <div variable="newVariable"></div>
 
-              <p class="variable-invalid" ng-show="this.addVariableForm.editDateValue.$error.date">
+              <p class="invalid" ng-show="this.addVariableForm.editDateValue.$error.date">
                 Supported pattern 'yyyy-MM-ddTHH:mm:ss'.
               </p>
-              <p class="variable-invalid" ng-show="this.addVariableForm.editIntegerValue.$error.numeric || this.addVariableForm.editFloatValue.$error.numeric">
+              <p class="invalid" ng-show="this.addVariableForm.editIntegerValue.$error.numeric || this.addVariableForm.editFloatValue.$error.numeric">
                 Only a {{ newVariable.type }} value is allowed.
               </p>
 
@@ -309,7 +309,7 @@
 
       <button type="submit" class="btn btn-primary" ng-click="save()"
               ng-hide="status === 'SUCCESS' || status === 'FAIL'"
-              ng-disabled="!isValid()" request-aware="addVariableForm">Add</button>      
+              ng-disabled="!isValid()">Add</button>      
 
       <button class="btn btn-primary" ng-click="close()"
               ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>               
