feat(filter): Show filter in process instance view
- the sitebar contains now a filter dialog, which shows the current number
  of selected activity instances and selected activities

related to CAM-1094

--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -9,8 +9,7 @@
 
     <div class="page-header">
       <small>Process Definition</small>
-      <h1 ng-show="!!processDefinition.name">{{ processDefinition.name }}</h1>
-      <h1 ng-show="!processDefinition.name">{{ processDefinition.key }}</h1>
+      <h1>{{ processDefinition.name || processDefinition.key }}</h1>
     </div>
 
     <div class="filters" ng-controller="ProcessDefinitionFilterController">
