feat(ldap): add button in webapp
- add "Setup LDAP" button in Webapp

related to #CAM-819

--- a/client/pages/setup.html
+++ b/client/pages/setup.html
@@ -89,9 +89,9 @@
         <p>You are trying to access the process engine &quot;<strong>{{ engineName }}</strong>&quot;. 
         This process engine is configured to use the built-in identity service (database) but has no administrative users configured. 
         This page allows you to create a user for accessing the process engine.</p>
-        <!--<p>
-          <a href="" disabled class="btn btn-success">» Setup LDAP instead</a>
-        </p>-->
+        <p>
+          <a href="http://docs.camunda.org/guides/installation-guide/" class="btn btn-success">» Setup LDAP instead</a>
+        </p>
       </div>
     </div>
   </section>
