--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-definition.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-definition.html
@@ -5,7 +5,7 @@
   </div>
 
   <!-- sitebar -->
-  <div class="ctn-column ctn-sitebar ctn-collapsable" collapsable="left">
+  <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
 
     <div class="page-header">
       <small>Process Definition</small>
@@ -205,7 +205,7 @@
           </li>
         </ul>
   
-        <div class="ctn-tabbed-content">
+        <div class="ctn-tabbed-content ctn-scroll">
           <view provider="selectedView" vars="processDefinitionVars" />
         </div>
       </div>
