--- a/client/webapp/src/main/webapp/app/tasklist/pages/overview.html
+++ b/client/webapp/src/main/webapp/app/tasklist/pages/overview.html
@@ -1,3 +1,5 @@
+<div notifications-panel></div>
+
 <!-- task list -->
 <table class="table table-hover task-table" multi-select="taskList.selection">
   <thead>
