--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -39,61 +39,36 @@
     <div class="filters" ng-controller="ProcessInstanceFilterController">
       <h5>
         Filter
-      </h5>
-
-      <i ng-if="!filterData.activityCount && !filterData.activityInstanceCount">
-        No view elements selected.
-      </i>
-
-      <ul class="unstyled">
-
-        <li class="filter" ng-if="filterData.activityInstanceCount">
-          <div class="name">
-            Activity Instances
-          </div>
-
-          <div class="search search-text">
-            <button class="btn btn-link btn-mini btn-control remove"
-                    ng-click="clearSelection()">
-              <i class="icon-remove"></i>
-            </button>
-            {{ filterData.activityInstanceCount }} elements selected
-          </div>
-        </li>
-      </ul>
-
-      <ul class="unstyled">
-
-        <li class="filter" ng-if="filterData.activityCount">
-          <div class="name">
-            Activities
-          </div>
-
-          <div class="search search-text">
-            <button class="btn btn-link btn-mini btn-control remove"
-                    ng-click="clearSelection()">
-              <i class="icon-remove"></i>
-            </button>
-            {{ filterData.activityCount }} elements selected
-          </div>
-        </li>
-      </ul>
-
-    </div>    
-
-    <div class="instance-tree">
-      <h5>
-        Activity Instance Tree
 
         <button class="btn btn-small btn-link btn-control btn-control-link"
-                help help-text="The tree of active activity instances corresponding to the process diagram">
+                help help-text="The activity instance tree with all currently selected activity instances. You may change the selection via (CTRL +) click.">
           <i class="icon-question-sign"></i>
         </button>
       </h5>
 
-      <div activity-instance-tree="activityInstanceTree" 
-           selection="filter"
-           on-element-click="handleActivityInstanceSelection(id, activityId, $event)">
+      <div class="filter">
+        <button class="btn btn-link btn-mini btn-control"
+                ng-show="filterData.activityInstanceCount"
+                ng-click="clearSelection()">
+          <i class="icon-remove"></i>
+        </button>
+        
+        <ng-pluralize count="filterData.activityInstanceCount"
+                    when="{ 'null' : 'Nothing', 
+                            '0': 'Nothing',
+                            'one': '1 activity instance',
+                            'other': '{{ filterData.activityInstanceCount }} activity instances'}">
+        </ng-pluralize>
+
+        selected
+      </div>
+
+
+      <div class="filter instance-tree">
+        <div activity-instance-tree="activityInstanceTree" 
+             selection="filter"
+             on-element-click="handleActivityInstanceSelection(id, activityId, $event)">
+        </div>
       </div>
     </div>
 
