chore(label): Adjust view labels in cockpit
- change "Process Definition" to "Process Definition View" and
  "Process Instance" to "Process Instance View"

related to CAM-1159

--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -29,10 +29,10 @@
   <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
 
     <div class="page-header">
-      <small>Process Instance</small>
+      <small>Process Instance View</small>
       <h1>{{ processDefinition.name || processDefinition.key }}</h1>
       <p>
-        <strong>{{ processInstance.id }}</strong>
+        <strong title="Process instance id, as it appears in the database">{{ processInstance.id }}</strong>
       </p>
     </div>
 
