--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -8,7 +8,7 @@
   <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
 
     <div class="page-header">
-      <small>Process Definition</small>
+      <small>Process Definition View</small>
       <h1>{{ processDefinition.name || processDefinition.key }}</h1>
     </div>
 
