feat(tasklist/forms): upgrade dev forms to latest features
Update our test task forms to use some of the new validation features

- invoice/approve.html: add ng-required
- invoice/assign-approver.html: add ng-pattern

Related to CAM-1322

--- a/client/webapp/src/main/webapp/develop/invoice/approve.html
+++ b/client/webapp/src/main/webapp/develop/invoice/approve.html
@@ -1,1 +1,1 @@
-Yo think its good? <input form-field type="boolean" key="approved" />
+Yo think its good? <input form-field type="boolean" key="approved" ng-required />
