feat(tasklist/forms): allow form scripts
Add ability to execute custom javascript in the scope of a form.

- The script must be contained in a script tag such as
  <script form-script type="text/form-script"></script>

- Inside the script, two variables are present:

  $scope
    - the current scope to which the script may bind to

  inject: a function that may be used to inject and use angular
    - services. To use inject, a user must call the function with a
      callback definition that either is a function which declares
      a $inject field or an array such as
      [ '$dep1', '$dep2', function($dep1, $dep2) {}].

Example:

  <script form-script type="text/form-script">

    // may use $scope to bind against the current scope directly
    // or use #inject (see below) to obtain application services

    inject([ '$scope', '$http', function($scope, $http) {

	  // $http service may be used
      $scope.$watch('variablesForm.$valid', function(newValue) {
        console.log('Form', newValue ? 'valid' : 'invalid');
      });
    }]);
  </script>

Closes CAM-1322

--- a/client/webapp/src/main/webapp/develop/invoice/assign-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/assign-approver.html
@@ -1,6 +1,23 @@
 <strong>Who should approve that damn thing?</strong>
 
-<input form-field type="string" required ng-pattern="/^(demo|john|mary|peter)$/" name="approver" />
+<script form-script type="text/form-script">
+
+  // may use $scope to bind against the current scope directly
+  // or use #inject (see below) to obtain application services
+  
+  inject([ '$scope', '$http', function($scope, $http) {
+
+    $scope.$watch('variablesForm.approver.$valid', function(newValue) {
+      console.log('Form', newValue ? 'valid' : 'invalid');
+    });
+
+    $scope.inputChanged = function() {
+      console.log('Input changed to', $scope.variablesForm.approver.$modelValue);
+    };
+  }]);
+</script>
+
+<input form-field type="string" required ng-pattern="/^(demo|john|mary|peter)$/" ng-change="inputChanged()" name="approver" />
 
 <p style="color: red" ng-if="variablesForm.approver.$invalid">
   Not a valid user!
