feat(icon-suspended): Provide suspended icon on ProcDef and ProcInst
- show suspended icon when process definition or process instance is
  suspended

related to CAM-1556

--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -15,7 +15,12 @@
 
     <div class="page-header">
       <small>Process Definition View</small>
-      <h1>{{ processDefinition.name || processDefinition.key }}</h1>
+        <h1>
+          {{ processDefinition.name || processDefinition.key }}
+          <span ng-show="processDefinition.suspended" title="Currently suspended">
+            <i class="icon-suspended"></i>
+          </span>
+        </h1>
     </div>
 
     <div class="filters" ng-controller="ProcessDefinitionFilterController">
