--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -17,9 +17,9 @@
       <small>Process Definition View</small>
         <h1>
           {{ processDefinition.name || processDefinition.key }}
-          <span ng-show="processDefinition.suspended" title="Currently suspended">
-            <i class="icon-suspended"></i>
-          </span>
+          <span class="badge badge-warning badge-suspended" ng-show="processDefinition.suspended" title="Currently suspended">
+            <i class="icon-suspended white"></i>
+          </span>            
         </h1>
     </div>
 
