refactor(camunda-webapp) fixed typo sitebar

--- a/client/webapp/src/main/webapp/app/tasklist/index.html
+++ b/client/webapp/src/main/webapp/app/tasklist/index.html
@@ -61,7 +61,7 @@
         <div class="breadcrumbs-panel"></div>
 
         <div class="row-fluid" if-logged-in>
-          <div class="ctn-sitebar span3" sitebar>
+          <div class="ctn-sidebar span3" sidebar>
           </div>
 
           <!-- view body provided by ngView -->
