--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -30,8 +30,8 @@
 
     </div>
 
-    <!-- sitebar -->
-    <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
+    <!-- sidebar -->
+    <div class="ctn-column ctn-sidebar ctn-collapsable ctn-scroll" collapsable="left">
 
       <div class="filters" ng-controller="ProcessInstanceFilterController">
         <h5>
