refactor(camunda-webapp) fixed typo sitebar

--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -26,8 +26,8 @@
       </span>
     </div>
 
-    <!-- sitebar -->
-    <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
+    <!-- sidebar -->
+    <div class="ctn-column ctn-sidebar ctn-collapsable ctn-scroll" collapsable="left">
 
       <div class="filters" ng-controller="ProcessDefinitionFilterController">
         <h5>
